--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,13 @@
   "manifest_version": 2,
   "name": "OTMT Data Copier",
   "description": "Copies data from one site to another",
-  "version": "0.1",
+  "version": "0.3",
   "browser_action": {
     "default_icon": "icons/icon.png",
     "default_popup": "popup/index.html"
   },
   "background": {
-    "scripts": [
-      "main.js"
-    ]
+    "scripts": ["main.js"]
   },
   "icons": {
     "16": "icons/icon.png",
@@ -19,14 +17,9 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "dist/content.module.js"
-      ],
-      "css": [
-      ]
+      "matches": ["<all_urls>"],
+      "js": ["dist/content.module.js"],
+      "css": ["dist/main.css"]
     }
   ],
   "permissions": [
@@ -39,7 +32,8 @@
     "unlimitedStorage",
     "https://ajax.googleapis.com/"
   ],
-  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
+  "content_security_policy":
+    "script-src 'self' https://www.google-analytics.com; object-src 'self'",
   "commands": {
     "toggle-workbench": {
       "suggested_key": {
@@ -52,10 +46,5 @@
     "page": "options/index.html",
     "chrome_style": false
   },
-  "web_accessible_resources": [
-    "dist/*",
-    "icons/*",
-    "popup/*",
-    "options/*"
-  ]
+  "web_accessible_resources": ["dist/*", "icons/*", "popup/*", "options/*"]
 }
